# MafiaOrbitCam

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  Config.tmpl  LICENSE
Include/: CDirectInput8Proxy.h  CDirectInputDevice8Proxy.h  Ini.hpp  ModConfig.h  Utils.hpp
Source/: Main.cpp
Vendors/reMafia/: CMakeLists.txt  C_Vehicle.cpp  C_Vehicle.h  C_animations_machine_de_luxe.cpp  C_animations_machine_de_luxe.h  C_chunk.cpp  C_chunk.h  C_game.cpp  C_game.h  C_mission.cpp  C_mission.h  C_program.cpp  C_program.h  C_roads.cpp  C_roads.h  C_str.hpp  C_traffic_element.cpp  C_traffic_element.h  C_using_object.cpp  C_using_object.h  C_web_path.cpp  C_web_path.h  G_Camera.h  G_IndicatorsClass.cpp  G_IndicatorsClass.h  G_Inventory.h  I3D_driver.h  I3D_frame.h  I3D_math.cpp  I3D_math.h  IGraph.h  LS3D.h  Memory.cpp  Memory.h  S_Collection.h  S_Item.h  Utils.h  g_collision.cpp  g_collision.h  vector.h
Vendors/reMafia/Actors/: C_DropOut.cpp  C_DropOut.h  C_PhThing.cpp  C_PhThing.h  C_actor.cpp  C_actor.h  C_bottle.cpp  C_bottle.h  C_box_new.cpp  C_box_new.h  C_car.cpp  C_car.h  C_clock.cpp  C_clock.h  C_crash_obj.cpp  C_detector.cpp  C_detector.h  C_door.cpp  C_door.h  C_human.cpp  C_human.h  C_player.cpp  C_player.h  C_public_physics.cpp  C_public_physics.h  C_traffic_generator.cpp  C_traffic_generator.h
